test/attr/ApplicationMain/attr_main_with_maindotswift/file.code
// This file is a part of the multi-file test driven by 'main.code'.

// NB: No "-verify"--this file should parse successfully on its own.
// RUN: %target-language-frontend -typecheck -parse-as-library %s

@main // expected-error{{'main' attribute cannot be used in a module that contains top-level code}}
class MyMain {
  static fn main() {
  }
}

fn hi() {}
